# qaguru_autotest_lesson_19

./: .gitignore  pyproject.toml
tests/: conftest.py
