[project]
name = "qaguru-autotest-lesson-19"
version = "0.1.0"
description = ""
authors = [
    {name = "Viacheslav Suchkov",email = "iexploudi@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "selene (==2.0.0rc9)",
    "allure-pytest (>=2.15.0,<3.0.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "appium-python-client (==2.6.1)",
    "requests (>=2.32.4,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)"
]

[tool.poetry]
packages = [{include = "qaguru_autotest_lesson_19", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
